--- a/about.html
+++ b/about.html
@@ -175,9 +175,9 @@
       <div class="section">
         <h2>Skills</h2>
         <ul>
-          <li><strong>Programming Languages:</strong> C++, Python, JavaScript, HTML, CSS</li>
-          <li><strong>Tools & Frameworks:</strong> Git, Node.js, Unity</li>
-          <li><strong>Other Skills:</strong> Game Development, Web Development, Problem Solving, Technical Support</li>
+          <li><strong>Programming Languages:</strong> C++, Python, HTML, SQL</li>
+          <li><strong>Tools & Frameworks:</strong> Git, Visual Studio, Agile, Jira</li>
+          <li><strong>Other Skills:</strong> Game Development, Problem Solving, Technical Support</li>
         </ul>
       </div>
 
