--- a/about.html
+++ b/about.html
@@ -129,6 +129,12 @@
     .footer-links a:hover {
       text-decoration: underline;
     }
+
+    .badge {
+  display: block;
+  margin: 20px auto;
+  width: 150px;
+}
   </style>
 </head>
 <body>
@@ -213,7 +219,9 @@
       <a href="https://github.com/bastionwolfe" target="_blank"><i class="fab fa-github"></i> GitHub</a> |
       <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a> |
       <a href="https://itch.io/profile/vinylocean" target="_blank"><i class="fab fa-itch-io"></i> Itch.io</a>
-      <img src="https://www.codewars.com/users/bastionwolfe/badges/micro.png" alt="Codewars Badge" class="badge">
+      <img src="https://www.codewars.com/users/bastionwolfe/badges/micro" 
+     alt="Codewars Badge" 
+     class="badge">
     </p>
     <p>&copy; 2025 Zach Music. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.</p>
   </footer>
