Add link to 'Finals' post in blog.html

--- a/blog.html
+++ b/blog.html
@@ -77,6 +77,7 @@
       <li><a href="posts/post6.html">Low-Leveling works</a> — November 10, 2025</li>
       <li><a href="posts/post7.html">Bonus Blog</a> — November 17, 2025</li>
       <li><a href="posts/pos8.html">World Generation</a> — November 25, 2025</li>
+      <li><a href="posts/pos9.html">Finals</a> — December 08, 2025</li>
     </ul>
   </main>
 
